"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

BRANCH CHECKLIST: code review TODO/FIXME through all prsim code!

2008-11-03	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-19:
	  Bug fix: ExprAlloc assert failed on wrong invariant
		on local node index in pass-gate macros.
		Fixed and added test casees: prsim/bad-pass-gate-*


	* HACKT-00-01-04-main-00-82-32-prsim-10-18:
	  Final formatting fix, now properly count the number of fanins
		per node, categorized by pull-direction and strength, 
		which fixes the remaining formatting differences 
		in test/lib, on why*-verbose analyses.  
	  For convenience, implemented state_manager::get_bool_frame_map()
	  Added Object/common/frame_map.h for typedef.  
	  Some general clean-up.
	  Ready to merge to trunk.  


	* HACKT-00-01-04-main-00-82-32-prsim-10-17:
	  Bug fix: forgot to register new unique types with 
		process_footprint_map during ExprAlloc, oops!
	  Wrote memory statistics for new structures, 'memstats' command.
	  Redeclared packed vs. aligned attributes for memory-critical
		expr and rule structs (huge difference).  
	  Many remaining regression tests difference re-validated (all format), 
		test-expects have been updated.  (in test/prsim, parser/prs)
		Few remaining differences in why*-verbose in lib/.


2008-11-02	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-82-32-prsim-10-16-b: (srcdir only tag)
	  fanin/fanout-get printing now shows the overall root pull for 
		every rule b/c rules are no longer grouped by pull direction
		and weakness, they are ordered by process fanin.  


	* HACKT-00-01-04-main-00-82-32-prsim-10-16-a: (srcdir only tag)
	  Better printing of rules, further reducing test differences.


	* HACKT-00-01-04-main-00-82-32-prsim-10-16:
	  Cleaned up evaluate_return_type struct, removed unused refs