@@ -1,11 +1,12 @@
 /**
 	\file "sim/state_base.cc"
-	$Id: state_base.cc,v 1.2 2007/01/21 06:00:35 fang Exp $
+	$Id: state_base.cc,v 1.2.52.1 2008/11/05 05:58:20 fang Exp $
  */
 
 #include <iostream>
 #include <string>
 #include "sim/state_base.h"
+#include "Object/module.h"
 
 namespace HAC {
 namespace SIM {
@@ -26,6 +27,13 @@ ostream&
 state_base::dump_source_paths(ostream& o) const {
 	o << "source paths:" << endl;
 	return ifstreams.dump_paths(o);
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+ostream&
+state_base::dump_memory_usage(ostream& o) const {
+	// TODO: report definitions' footprints' memory usage
+	return mod.get_state_manager().dump_memory_usage(o);
 }
 
 //=============================================================================
