@@ -1,0 +1,35 @@
+global-state-manager:
+	process-entry-pool: (3 * 76 B/inst) = 228 B
+		sum(frame-map): (14 * 4 B/entry) = 56 B
+	channel-entry-pool: (1 * 20 B/inst) = 20 B
+	enum-entry-pool: (1 * 12 B/inst) = 12 B
+	int-entry-pool: (1 * 12 B/inst) = 12 B
+	bool-entry-pool: (4 * 12 B/inst) = 48 B
+node-state: (4 * 128 B/node) = 512 B
+node::fanout: (4 * 4 B/FO) = 16 B
+unique-process: (2 * 68 B/type) = 136 B
+	exprs+graph_nodes: (2 *(16+16) B/expr) = 64 B
+	rules+map_nodes: (2 *(12+12) B/rule) = 48 B
+	local_nodes: (6 * 60 B/node) = 360 B
+	fanin/outs: (4 * 4 B/fan) = 16 B
+process-instances: (3 * 24 B/proc) = 72 B
+	expr-state: (4 * 4 B/expr) = 16 B
+	rule-state: (4 * 1 B/rule) = 4 B
+expr-process-map: (3 * 24 B/proc) = 72 B
+event-pool: (1 * 32 B/event) = 32 B
+event-free-list: (0 * 20 B/free) = 0 B
+event-queue: (0 * 12 B/event) = 0 B
+exclhi-queue: (0 * 28 B/event) = 0 B
+excllo-queue: (0 * 28 B/event) = 0 B
+pending-queue: (0 * 20 B/event) = 0 B
+mk-exclhi-rings: (0 * 24 B/ring) = 0 B
+mk-exclhi::nodes: (0 * 20 B/node) = 0 B
+mk-excllo-rings: (0 * 24 B/ring) = 0 B
+mk-excllo::nodes: (0 * 20 B/node) = 0 B
+chk-exclhi-locks: (32 / 8 lock/B) >= 4 B
+chk-excllo-locks: (32 / 8 lock/B) >= 4 B
+chk-exclhi-rings: (0 * 32 B/ring) = 0 B
+chk-exclhi::nodes: (0 * 4 B/node) = 0 B
+chk-excllo-rings: (0 * 32 B/ring) = 0 B
+chk-excllo::nodes: (0 * 4 B/node) = 0 B
+watch-list: (0 * 48 B/node) = 0 B
