@@ -1,0 +1,35 @@
+global-state-manager:
+	process-entry-pool: (3 * 152 B/inst) = 456 B
+		sum(frame-map): (14 * 8 B/entry) = 112 B
+	channel-entry-pool: (1 * 40 B/inst) = 40 B
+	enum-entry-pool: (1 * 24 B/inst) = 24 B
+	int-entry-pool: (1 * 24 B/inst) = 24 B
+	bool-entry-pool: (4 * 24 B/inst) = 96 B
+node-state: (4 * 224 B/node) = 896 B
+node::fanout: (4 * 8 B/FO) = 32 B
+unique-process: (2 * 136 B/type) = 272 B
+	exprs+graph_nodes: (2 *(16+32) B/expr) = 96 B
+	rules+map_nodes: (2 *(16+24) B/rule) = 80 B
+	local_nodes: (6 * 120 B/node) = 720 B
+	fanin/outs: (4 * 8 B/fan) = 32 B
+process-instances: (3 * 48 B/proc) = 144 B
+	expr-state: (4 * 4 B/expr) = 16 B
+	rule-state: (4 * 1 B/rule) = 4 B
+expr-process-map: (3 * 48 B/proc) = 144 B
+event-pool: (1 * 48 B/event) = 48 B
+event-free-list: (0 * 40 B/free) = 0 B
+event-queue: (0 * 16 B/event) = 0 B
+exclhi-queue: (0 * 48 B/event) = 0 B
+excllo-queue: (0 * 48 B/event) = 0 B
+pending-queue: (0 * 40 B/event) = 0 B
+mk-exclhi-rings: (0 * 48 B/ring) = 0 B
+mk-exclhi::nodes: (0 * 40 B/node) = 0 B
+mk-excllo-rings: (0 * 48 B/ring) = 0 B
+mk-excllo::nodes: (0 * 40 B/node) = 0 B
+chk-exclhi-locks: (64 / 8 lock/B) >= 8 B
+chk-excllo-locks: (64 / 8 lock/B) >= 8 B
+chk-exclhi-rings: (0 * 64 B/ring) = 0 B
+chk-exclhi::nodes: (0 * 8 B/node) = 0 B
+chk-excllo-rings: (0 * 64 B/ring) = 0 B
+chk-excllo::nodes: (0 * 8 B/node) = 0 B
+watch-list: (0 * 64 B/node) = 0 B
